infrastructure/longhorn/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn
  annotations:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
