infrastructure/longhorn/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ui
  namespace: longhorn
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`longhorn.lan`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
